# ur5e_cell

ur5e_cell_description/launch/: view_ur_cell.launch.py
ur5e_cell_description/urdf/: workcell.urdf.xacro
ur5e_cell_manipulation/: CMakeLists.txt  package.xml
ur5e_cell_manipulation/config/: behavior.xml  moveitcpp.yaml
ur5e_cell_manipulation/include/ur5e_cell_manipulation/: detect_aruco_node.hpp  execute_motion_node.hpp  gripper_node.hpp  manipulation_behaviour_manager.hpp  plan_motion_node.hpp  set_pose_node.hpp
ur5e_cell_manipulation/launch/: manipulation.launch.py  manipulation_perception.launch.py
ur5e_cell_manipulation/src/: robot_program_node.cpp
ur5e_cell_moveit_config/config/: moveit_controllers.yaml  pilz_cartesian_limits.yaml
ur5e_cell_pick_n_place/launch/: pick_n_place.launch.py  pick_n_place_driver.launch.py
ur5e_cell_pick_n_place/src/: pick_n_place_node.cpp
