<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_cell_manipulation</name>
  <version>0.0.0</version>
  <description>A small application showing manipulation and behaviour trees.</description>
  <maintainer email="christoph.hellmann.santos@ipa.fraunhofer.de">Christoph Hellmann Santos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_msgs</depend>
  <depend>moveit</depend>
  <depend>moveit_ros_planning</depend>
  <depend>ur_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>aruco_ros</depend>
  <depend>aruco_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
